--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-select {
-  -webkit-appearance: none;
+.select {
+  appearance: none;
   background-image: url('./assets/svg/arrow.svg');   
   background-repeat: no-repeat;
   background-position: right 16px top 50%, 0 0;
 }
 
-button{
+.common-btn{
   background-image: linear-gradient(to right , #0071BB , #39A3E7);
 }
